<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/secondActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColorHint="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="Name:  "
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/Name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#ffffff"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColorHint="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Password:  "
                android:textColor="#FFFFFF"
                android:textSize="30dp" />
            <TextView
                android:id="@+id/Password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:textColorHint="#ffffff"
                android:textSize="20dp" />
        </LinearLayout>


    <Button
        android:id="@+id/show_list"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="#DDCFCF"
        android:backgroundTint="#E2D9D9"
        android:gravity="center"
        android:text="Show list"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/backbutton"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="#DDCFCF"
        android:backgroundTint="#E2D9D9"
        android:gravity="center"
        android:text="Backbutton"
        android:textAllCaps="false" />


</LinearLayout>