<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/firstActivity"
    android:background="@drawable/backgroundimg">

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="Login form"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/Name"
        android:textColorHint="#ccc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="Name "
        android:textColor="#FFFFFF"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:textColorHint="#ccc"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="Password "
        android:textColor="#FFFFFF"
        android:textSize="30dp" />

    <Button
        android:id="@+id/Login"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="#DDCFCF"
        android:backgroundTint="#E2D9D9"
        android:gravity="center"
        android:text="Sign In"
        android:textAllCaps="false" />



</LinearLayout>